app/javascript/assets/stylesheets/movies.css
.movies-main {
  flex-grow: 3;
}

.movies-cont {
  height: 100%;
  display: flex;
  flex-flow: column nowrap;
}

.main-nav {
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
  align-items: center;
  background-color: #121212;
  padding: 0.65em;
  height: 56px;
}

.container {
  padding: 0 4.8em;
}

.logo-main {
  width: 65px;
  height: 33px;
  margin-left: 0.5em;
  background: url("../images/imdb_logo.png") center / contain no-repeat;
}

.user-box {
  position: relative;
  padding: 0.35em 0.8em;
  margin-right: 2em;
  border-radius: 0.32rem;
  color: #929292;
  transition: all 400ms;
}

.user-box:hover {
  background-color: #252525;
  color: white !important;
}

.user-box:active {
  background-color: #6b6b6b;
}

.drop-icon {
  font-size: 10px;
  color: white;
  padding-left: 0.3em;
}

.sign-user {
  color: white;
  font-size: .9rem;
  font-weight: 600;
}

.sign-in-link {
  text-decoration: none;
  color: white;
}

.auth-drop-menu {
  position: absolute;
  top: 2.5em;
  left: 0;
  border-radius: 0.25rem;
  background-color: #252525;
  text-align: center;
  padding: 0;
  width: 110px;
}

.auth-drop-item {
  list-style: none;
  padding: 1em 0;
}

.auth-drop-item a {
  text-decoration: none;
  color: white;
}

.main-back {
  background-color: #d8d7d3;
  height: 100%;
  padding-bottom: 3em;
}

.movies-left {
  background-color: #f8f8f8;
  padding: 20px 21px 24px 20px;
}

.genre-name {
  margin: 2em 0 0.5em;
  color: #424242;
  font-size: 24px;
}

.top-hr {
  border-top: 1px solid rgb(177, 177, 177);
}

.m-list-table {
  min-height: 381px;
}

table {
  border-collapse: collapse;
  width: 100%;
}

th {
  color: #666666;
  font-size: 12px;
  padding-bottom: 3px;
  text-align: left;
  vertical-align: bottom;
}

table * {
  font-family: Verdana, Arial, sans-serif;
  font-size: 13px;
}

tbody {
  min-height: 381px;
}

tbody tr { 
  border: 1px solid white;
}

tr:nth-child(even) {
  background-color: #f6f6f5;
}

.column-1 {
  width: 10%;
}

.column-2 {
  width: 67%;
}

.row-column-3, .row-column-4 {
  font-weight: bolder;
}

.row-column-4 {
  position: relative;
}

.movie-img-link {
  display: inline-block;
  width: 100%;
  height: 100%;
  overflow: hidden;
  padding: 0.2em;
}

.movie-image {
  width: 77%;
  object-fit: cover;
  object-position: center;
}

.imdb-star {
  color: #efc767
}

.full-star {
  color: #6a92ed;
}

.rate-btn {
  background: none;
  border: none;
  padding: 0;
  text-decoration: none;
}

.user-star {
  color: #d0d0d0;
}

.user-star:hover {
  color: #6a92ed;
}

.rate-box {
  position: absolute;
  width: 283px;
  top: 0;
  left: -22.3em;
  background-color: white;
  padding: 2px 10px;
  border-radius: 0.8rem;
}

.rb-left {
  border-right: 1px solid #bfbfbf;
  margin-right: 0.4em;
}

.unrate-icon {
  color: #d0d0d0;
}

.unrate-icon:hover {
  color: #ff4c4c;
}

.movies-right {
  padding: 20px 21px 24px 20px;
  background-color: #f0f0f0;
}

.genres-h {
  margin: 2em 0 0.5em;
  font-size: 18px;
  color: #333;
}

.genre-list * {
  font-family:  Verdana, Geneva, Tahoma, sans-serif;
  font-size: 13px;
}

.genre-badge:hover {
  text-decoration: none;
  color: white;
}

.ap-movie {
  position: absolute;
  right: 5em;
}

.main-footer-inner {
  background-color: #121212;
  padding: 3em 0;
  color: rgba(255, 255, 255, 0.7);
  font-size: 0.75rem;
  text-align: center;
}

